# NBCPL

./: .env  .gitignore  AST.cpp  AST.h  ASTVisitor.h  AST_Cloner.cpp  AST_Cloner.h  AssemblerData.cpp  AssemblerData.h  AssemblyWriter.cpp  AssemblyWriter.h  BasicBlock.cpp  BasicBlock.h  BitPatcher.cpp  BitPatcher.h  BoundsCheckingPass.cpp  BoundsCheckingPass.h  CFGBuilderPass.cpp  CFGBuilderPass.h  CallFrameManager.cpp  CallFrameManager.h  ClassPass.cpp  ClassPass.h  ClassTable.cpp  ClassTable.h  CodeBuffer.cpp  CodeBuffer.h  CodeLister.cpp  CodeLister.h  CommonSubexpressionEliminationPass.cpp  CommonSubexpressionEliminationPass.h  ConstantFoldingPass.cpp  ConstantFoldingPass.h  ControlFlowGraph.cpp  ControlFlowGraph.h  CreateMethodReorderPass.cpp  CreateMethodReorderPass.h  DataGenerator.cpp  DataGenerator.h  DataTypes.h  (+513 more)
.zed/: prompts.json
HeapManager/: BloomFilter.h  HeapManager.cpp  HeapManager.h  Heap_allocList.cpp  Heap_allocObject.cpp  Heap_allocString.cpp  Heap_allocVec.cpp  Heap_dumpHeap.cpp  Heap_dumpHeapSignalSafe.cpp  Heap_free.cpp  Heap_printMetrics.cpp  Heap_resizeString.cpp  (+7 more)
runtime/: 0 - howto_add_routine.md  BCPLError.c  BCPLError.h  CMakeLists.txt  ListDataTypes.h  README.md  RuntimeBridge.cpp  RuntimeBridge.h  heap_interface.c  heap_interface.cpp  heap_interface.h  heap_manager.h  jit_heap_bridge.cpp  jit_runtime.cpp  main.c  runtime.c  runtime.h  runtime_bridge.cpp  runtime_c_globals.cpp  runtime_core.inc  runtime_file_api.inc  runtime_freelist.c  runtime_freelist.h  runtime_io.inc  runtime_string_ops.c  runtime_string_ops.cpp  runtime_string_utils.inc  runtime_test.c  runtimetester.cpp  standalone_heap.c  starter.c  string_optimizations_embedded.cpp
runtime/SDL2/: README.md  sdl2_registration.cpp  sdl2_registration.h  sdl2_runtime.cpp  sdl2_runtime.h
runtime/SDL2_mixer/: sdl2_mixer_registration.cpp  sdl2_mixer_registration.h  sdl2_mixer_runtime.cpp  sdl2_mixer_runtime.h
runtime/string_optimizations/: fast_char_copy.c  fast_char_copy.h  fast_string_allocator.c  fast_string_allocator.h  optimized_bcpl_strings.cpp
(+1474 files in other folders)
